src/test/ui/issue-23302-2.stderr
error[E0391]: cycle detected when const-evaluating `Y::A::{{initializer}}`
  --> $DIR/issue-23302-2.rs:14:9
   |
LL |     A = Y::B as isize, //~ ERROR E0391
   |         ^^^^
   |
note: ...which requires computing layout of `Y`...
   = note: ...which again requires const-evaluating `Y::A::{{initializer}}`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
